# releasetrain-pip-package

./: PACKAGE_DOCUMENTATION.md  pyproject.toml  readme.md
examples/: example_agent_update.py  example_package_update.py
src/PackageUpdateSearch/: APIs.ipynb  APP_DOCUMENTATION.md  RT.py  agenticRT.py  app.py  example.py  testing.py
src/PackageUpdateSearch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
